build/rough
Scanning dependencies of target minotaur
[  1%] Building CXX object src/base/CMakeFiles/minotaur.dir/Chol.o
[  1%] Building CXX object src/base/CMakeFiles/minotaur.dir/Constraint.o
[  2%] Building CXX object src/base/CMakeFiles/minotaur.dir/CxQuadHandler.o
[  2%] Building CXX object src/base/CMakeFiles/minotaur.dir/CxUnivarHandler.o
[  3%] Building CXX object src/base/CMakeFiles/minotaur.dir/Eigen.o
[  4%] Building CXX object src/base/CMakeFiles/minotaur.dir/Function.o
[  4%] Building CXX object src/base/CMakeFiles/minotaur.dir/LinearFunction.o
[  5%] Building CXX object src/base/CMakeFiles/minotaur.dir/Linearizations.o
[  5%] Building CXX object src/base/CMakeFiles/minotaur.dir/NlPresHandler.o
[  7%] Building CXX object src/base/CMakeFiles/minotaur.dir/OAHandler.o
[  7%] Building CXX object src/base/CMakeFiles/minotaur.dir/Objective.o
[  8%] Building CXX object src/base/CMakeFiles/minotaur.dir/ParQGHandler.o
[  8%] Building CXX object src/base/CMakeFiles/minotaur.dir/PerspCon.o
[  9%] Building CXX object src/base/CMakeFiles/minotaur.dir/PerspCutHandler.o
[  9%] Building CXX object src/base/CMakeFiles/minotaur.dir/PolynomialFunction.o
[ 10%] Building CXX object src/base/CMakeFiles/minotaur.dir/Presolver.o
[ 10%] Building CXX object src/base/CMakeFiles/minotaur.dir/Problem.o
[ 11%] Building CXX object src/base/CMakeFiles/minotaur.dir/QPDProcessor.o
[ 13%] Building CXX object src/base/CMakeFiles/minotaur.dir/QuadHandler.o
[ 13%] Building CXX object src/base/CMakeFiles/minotaur.dir/QuadraticFunction.o
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp: In member function ‘bool Minotaur::QuadraticFunction::isConvex()’:
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp:342:13: error: ‘Minotaur::SubgraphIterator {aka struct std::_Rb_tree_const_iterator<std::pair<std::set<Minotaur::Variable*>, Minotaur::QuadraticFunction*> >}’ has no member named ‘first’
       if (s.first->find(it->first->first) != s.first->end()) {
             ^~~~~
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp:342:34: error: base operand of ‘->’ has non-pointer type ‘const std::pair<Minotaur::Variable*, Minotaur::Variable*>’
       if (s.first->find(it->first->first) != s.first->end()) {
                                  ^~
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp:342:48: error: ‘Minotaur::SubgraphIterator {aka struct std::_Rb_tree_const_iterator<std::pair<std::set<Minotaur::Variable*>, Minotaur::QuadraticFunction*> >}’ has no member named ‘first’
       if (s.first->find(it->first->first) != s.first->end()) {
                                                ^~~~~
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp:358:18: error: ‘Minotaur::SubgraphIterator {aka struct std::_Rb_tree_const_iterator<std::pair<std::set<Minotaur::Variable*>, Minotaur::QuadraticFunction*> >}’ has no member named ‘first’
         ret1 = s.first->insert(v);
                  ^~~~~
/home/mustafa.vora/minotaur/src/base/QuadraticFunction.cpp:359:11: error: ‘Minotaur::SubgraphIterator {aka struct std::_Rb_tree_const_iterator<std::pair<std::set<Minotaur::Variable*>, Minotaur::QuadraticFunction*> >}’ has no member named ‘second’
         s.second->addTerm(it->first, it->second);
           ^~~~~~
src/base/CMakeFiles/minotaur.dir/build.make:2102: recipe for target 'src/base/CMakeFiles/minotaur.dir/QuadraticFunction.o' failed
make[2]: *** [src/base/CMakeFiles/minotaur.dir/QuadraticFunction.o] Error 1
CMakeFiles/Makefile2:181: recipe for target 'src/base/CMakeFiles/minotaur.dir/all' failed
make[1]: *** [src/base/CMakeFiles/minotaur.dir/all] Error 2
Makefile:127: recipe for target 'all' failed
make: *** [all] Error 2
